#* Author: Wady <iswady@163.com>
#* Date:   Thu Feb 24 12:00:00 2022

set(INCLUDE_SUBDIR_NAME "${PROJECT_NAME_LOWER}")

set(HEADER_FILE_LIST
    ../mongoose.h
)

set(HEADER_FILES "")
foreach(HEADER_FILE ${HEADER_FILE_LIST})
    list(APPEND HEADER_FILES "${CMAKE_CURRENT_LIST_DIR}/${HEADER_FILE}")
endforeach()

install(FILES ${HEADER_FILES}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${INCLUDE_SUBDIR_NAME}
    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
)
