#* Author: Wady <iswady@163.com>
#* Date:   Thu Feb 24 12:00:00 2022

set(LIBRARY_NAME "${PROJECT_NAME_LOWER}")

set(SOURCE_FILES_C
    base64.c
    dns.c
    event.c
    fmt.c
    fs.c
    fs_fat.c
    fs_packed.c
    fs_posix.c
    http.c
    iobuf.c
    json.c
    log.c
    md5.c
    mqtt.c
    net.c
    rpc.c
    sha1.c
    sntp.c
    sock.c
    ssi.c
    str.c
    timer.c
    tls_dummy.c
    tls_mbed.c
    tls_openssl.c
    url.c
    util.c
    ws.c
)

set(LIBS
    ${COMMON_LIBS}
)

set(INCLUDE_DIRS
    ${COMMON_INCLUDE_DIRS}
)

#utils_apply_compile_flags(SOURCE_FILES_C STRICT_OPTIONS_CPP STRICT_OPTIONS_C)

if(ENABLE_STATIC)
    add_library(${LIBRARY_NAME}-static STATIC ${SOURCE_FILES_C})
    target_link_libraries(${LIBRARY_NAME}-static INTERFACE ${LIBS})
    target_include_directories(${LIBRARY_NAME}-static PUBLIC ${INCLUDE_DIRS})
    install(TARGETS ${LIBRARY_NAME}-static EXPORT ${PROJECT_NAME}Targets
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
    )
endif()
if(ENABLE_SHARED)
    add_library(${LIBRARY_NAME} SHARED ${SOURCE_FILES_C})
    target_link_libraries(${LIBRARY_NAME} PRIVATE ${LIBS})
    target_include_directories(${LIBRARY_NAME} PUBLIC ${INCLUDE_DIRS})
    install(TARGETS ${LIBRARY_NAME} EXPORT ${PROJECT_NAME}Targets
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
    )
endif()

set(LIBRARY_NAME "${LIBRARY_NAME}" PARENT_SCOPE)
